WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65132
Assertion called in ExecutableBase::generatedJITCodeForCall() when JIT is not available
https://bugs.webkit.org/show_bug.cgi?id=65132
Summary
Assertion called in ExecutableBase::generatedJITCodeForCall() when JIT is not...
Jon Lee
Reported
2011-07-25 13:53:58 PDT
Need to ensure that JIT is available.
Attachments
Patch
(3.06 KB, patch)
2011-07-25 14:17 PDT
,
Jon Lee
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2011-07-25 13:54:13 PDT
<
rdar://problem/9836297
>
Jon Lee
Comment 2
2011-07-25 14:17:09 PDT
Created
attachment 101909
[details]
Patch
Jon Lee
Comment 3
2011-07-25 14:34:07 PDT
Committed
r91706
: <
http://trac.webkit.org/changeset/91706
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug