Assertion called in ExecutableBase::generatedJITCodeForCall() when JIT is not available https://bugs.webkit.org/show_bug.cgi?id=65132 <rdar://problem/9836297>

Reviewed by Oliver Hunt.

Make sure the JIT is available to use before running the following calls:

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::unlinkCalls): Added check, return early if JIT is not available.
* bytecode/CodeBlock.h:
(JSC::CodeBlock::addMethodCallLinkInfos): Added assertion.

Canonical link: https://commits.webkit.org/80877@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91706 268f45cc-cd09-0410-ab3c-d52691b4dbfc